media: rockchip: isp: add proc fs
Change-Id: I4e8ca0c89275fae04c14ad4c1e1a7750758692fe
Signed-off-by: Cai YiWei <cyw@rock-chips.com>

--- a/drivers/media/platform/rockchip/isp/Makefile
+++ b/drivers/media/platform/rockchip/isp/Makefile
@@ -16,7 +16,8 @@ video_rkisp-objs += rkisp.o \
 			dmarx.o \
 			csi.o \
 			bridge.o \
-			isp_mipi_luma.o
+			isp_mipi_luma.o \
+			procfs.o
 
 ifdef CONFIG_VIDEO_ROCKCHIP_THUNDER_BOOT_ISP
 video_rkisp-objs += rkisp_tb_helper.o
