media: i2c: imx378: select V4L2_FWNODE
Building imx378 fails now unless V4L2_FWNODE is selected:

drivers/media/i2c/imx378.o: In function `imx378_probe':
imx378.c:(.text+0x1074): undefined reference to `v4l2_async_register_subdev_sensor_common'

Fixes: 797d705c9037 ("media: i2c: add imx378 sensor driver")
Change-Id: Ie89333159f76d435dc253d9b025bc83c949066ec
Signed-off-by: Tao Huang <huangtao@rock-chips.com>

--- a/drivers/media/i2c/Kconfig
+++ b/drivers/media/i2c/Kconfig
@@ -749,6 +749,7 @@ config VIDEO_IMX378
 	tristate "Sony IMX378 sensor support"
 	depends on I2C && VIDEO_V4L2 && VIDEO_V4L2_SUBDEV_API
 	depends on MEDIA_CAMERA_SUPPORT
+	select V4L2_FWNODE
 	help
 	  This is a Video4Linux2 sensor driver for the Sony
 	  IMX378 camera.
