ANDROID: Don't add image to all target with KBUILD_MIXED_TREE
When KBUILD_MIXED_TREE is set, vmlinux and related images come from an
out-of-tree location and vmlinux shouldn't be compiled. arch/arm64 and
arch/x86 add the default Images to all target, so remove that default
behavior when KBUILD_MIXED_TREE is set.

This when an out-of-tree module, e.g. virtual-device, runs "make all"
instead of "make modules".

Bug: 178469391
Change-Id: I8c43d5d66a8bf6ed27f91df7e173399d4f4a23c0
Signed-off-by: Elliot Berman <quic_eberman@quicinc.com>

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -260,8 +260,11 @@ BOOT_TARGETS = bzdisk fdimage fdimage144 fdimage288 isoimage
 
 PHONY += bzImage $(BOOT_TARGETS)
 
+# Don't compile Image in mixed build with "all" target
+ifndef KBUILD_MIXED_TREE
 # Default kernel to build
 all: bzImage
+endif
 
 # KBUILD_IMAGE specify target image being built
 KBUILD_IMAGE := $(boot)/bzImage
