arm64: rockchip_defconfig: Disable DVB/TV/Radio media drivers
According to gki commit 13c6a5e99354 ("ANDROID: Re-enable menus
hidden by disabling MEDIA_SUPPORT_FILTER").

-CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_CEC_SUPPORT=y
-CONFIG_MEDIA_ANALOG_TV_SUPPORT
-CONFIG_MEDIA_DIGITAL_TV_SUPPORT
-CONFIG_MEDIA_RADIO_SUPPORT
-CONFIG_MEDIA_SDR_SUPPORT
-CONFIG_MEDIA_TEST_SUPPORT

Change-Id: Id001fbc110e165e63249fc597f0681c3ce44ea2d
Signed-off-by: Tao Huang <huangtao@rock-chips.com>

--- a/arch/arm64/configs/rockchip_defconfig
+++ b/arch/arm64/configs/rockchip_defconfig
@@ -552,8 +552,11 @@ CONFIG_REGULATOR_TPS65132=y
 CONFIG_REGULATOR_XZ3216=y
 CONFIG_REGULATOR_DIO5632=y
 CONFIG_MEDIA_SUPPORT=y
-CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_CEC_SUPPORT=y
+# CONFIG_MEDIA_ANALOG_TV_SUPPORT is not set
+# CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
+# CONFIG_MEDIA_RADIO_SUPPORT is not set
+# CONFIG_MEDIA_SDR_SUPPORT is not set
+# CONFIG_MEDIA_TEST_SUPPORT is not set
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_MEDIA_USB_SUPPORT=y
