dt-bindings: phy: rockchip-inno-usb2: make utmi vbus configurable
Rockchip USB2 phy provides utmi_avalid and utmi_bvalid for
user to check UTMI vbus status. Generally, both of them can
reflect the vbus status correctly, and the utmi_bvalid has
higher sensitivity, so we select the utmi_bvalid to get vbus
status by default.

But some special SoCs may not provide utmi_bvalid, so we
need to select utmi_avalid in this case.

Signed-off-by: Wu Liang feng <wulf@rock-chips.com>
Signed-off-by: Frank Wang <frank.wang@rock-chips.com>
Change-Id: I3057704ea2472fe67b3fcdea8ba66e88061b547b

--- a/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
+++ b/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
@@ -109,6 +109,12 @@ properties:
           Phandle to a regulator that provides power to VBUS.
           See ./phy-bindings.txt for details.
 
+      rockchip,utmi-avalid:
+        $ref: /schemas/types.yaml#/definitions/flag
+        description: when set, the usb2 phy will use avalid status bit to
+          get vbus status. If not, it will use bvalid status bit to get vbus
+          status by default.
+
     required:
       - "#phy-cells"
       - interrupts
