--- a/scripts/Makefile.modpost
+++ b/scripts/Makefile.modpost
@@ -72,15 +72,14 @@ ifeq ($(KBUILD_EXTMOD),)
 input-symdump := $(mixed-build-prefix)vmlinux.symvers
 output-symdump := modules-only.symvers
 module_srcpath := $(srctree)
-input-symdump := vmlinux.symvers
 
 quiet_cmd_cat = GEN     $@
       cmd_cat = cat $(real-prereqs) > $@
 
-ifneq ($(wildcard vmlinux.symvers),)
+ifneq ($(wildcard $(mixed-build-prefix)vmlinux.symvers),)
 
 __modpost: Module.symvers
-Module.symvers: vmlinux.symvers modules-only.symvers FORCE
+Module.symvers: $(mixed-build-prefix)vmlinux.symvers modules-only.symvers FORCE
 	$(call if_changed,cat)
 
 targets += Module.symvers
