ANDROID: GKI: Enable PARAVIRT_TIME_ACCOUNTING config
Enable PARAVIRT_TIME_ACCOUNTING in gki_defconfig to
support fine granularity task steal time accounting.

Bug: 223353878
Change-Id: I26d515ba0a94deacbaddad8432000c64c2cc9187
Signed-off-by: Naina Mehta <quic_nainmeht@quicinc.com>
(cherry picked from commit 1aeba0549aecb0ce773dd0a54c7d54c837963522)

--- a/arch/x86/configs/gki_defconfig
+++ b/arch/x86/configs/gki_defconfig
@@ -54,6 +54,7 @@ CONFIG_SMP=y
 CONFIG_X86_X2APIC=y
 CONFIG_HYPERVISOR_GUEST=y
 CONFIG_PARAVIRT=y
+CONFIG_PARAVIRT_TIME_ACCOUNTING=y
 CONFIG_NR_CPUS=32
 # CONFIG_X86_MCE is not set
 CONFIG_EFI=y
