ARM: dts: ast2600-evb: Enable devices for CI testing
Enable IPMI BT, UART3/4/10/11, and UART routing for
CI testing.

Signed-off-by: Chia-Wei Wang <chiawei_wang@aspeedtech.com>
Change-Id: I5ad80665b5f11bcc20effa07b3ad9188f0a8b88a

--- a/arch/arm/boot/dts/aspeed-ast2600-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-evb.dts
@@ -806,6 +806,10 @@
 	snoop-ports = <0x80>;
 };
 
+&ibt {
+	status = "okay";
+};
+
 &kcs1 {
 	kcs_addr = <0xca0>;
 	status = "okay";
@@ -1037,5 +1041,25 @@
 };
 
 &acry {
+	status = "okay";
+};
+
+&uart3 {
+	status = "okay";
+};
+
+&uart4 {
+	status = "okay";
+};
+
+&uart10 {
+	status = "okay";
+};
+
+&uart11 {
+	status = "okay";
+};
+
+&uart_routing {
 	status = "okay";
 };
