--- a/arch/arm/configs/aspeed_g6_defconfig
+++ b/arch/arm/configs/aspeed_g6_defconfig
@@ -240,6 +240,7 @@ CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_NEW_ASPEED=y
 CONFIG_I2C_FSI=y
 CONFIG_I2C_SLAVE_MQUEUE=y
+CONFIG_I2C_SLAVE_EEPROM=y
 CONFIG_I3C=y
 CONFIG_I3CDEV=y
 CONFIG_AST2600_I3C_MASTER=y
